# esp32c3-watch

./: README.md
components/mateusglucas__wifi_sta/: .component_hash  idf_component.yml  wifi_sta.c
components/mateusglucas__wifi_sta/include/: wifi_sta.h
components/parabuzzle__http_rest_client/: CMakeLists.txt
components/parabuzzle__http_rest_client/include/: http_client_demo.h
components/parabuzzle__http_rest_client/src/: http_client_demo.c
main/: idf_component.yml  main.c
